--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 9002",
+    "dev": "next dev -p 9002 --port 9002 --hostname 0.0.0.0",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
@@ -50,7 +50,6 @@
     "next": "14.2.5",
     "patch-package": "^8.0.0",
     "react": "^18",
-    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
@@ -59,6 +58,8 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@genkit-ai/firebase": "^1.14.1",
+    "@opentelemetry/exporter-jaeger": "^1.27.0",
     "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
