--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "14.2.5",
     "patch-package": "^8.0.0",
     "react": "^18",
+    "react-day-picker": "^9.12.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
