--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@genkit-ai/firebase": "1.13.0",
     "@genkit-ai/googleai": "1.13.0",
-    
     "@hookform/resolvers": "^4.1.3",
     "@opentelemetry/exporter-jaeger": "^1.27.0",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -65,6 +64,8 @@
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "eslint": "8.57.1",
+    "eslint-config-next": "16.0.10",
     "genkit-cli": "1.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
